feat: Call new window

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,17 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/search"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="android.widget.SearchView" />
-
-    <item
         android:id="@+id/menu_all"
         android:title="@string/menu_all" />
 
     <item
         android:id="@+id/menu_favorites"
         android:title="@string/menu_favorites" />
+
+    <item
+        android:id="@+id/menu_newact"
+        android:title="@string/menu_activity" />
 </menu>
