feat: Add new activity for details

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -16,4 +16,8 @@
     <item
         android:id="@+id/menu_favorites"
         android:title="@string/menu_favorites" />
+
+    <item
+        android:id="@+id/menu_newact"
+        android:title="@string/menu_activity" />
 </menu>
