feat: Show clinic informations @ new activity

--- a/app/src/main/res/layout/clinica_info_layout.xml
+++ b/app/src/main/res/layout/clinica_info_layout.xml
@@ -20,12 +20,11 @@
         android:id="@+id/tv_clinica"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:autoSizeTextType="uniform"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="@string/nome_fantasia"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/ib_star"
         app:layout_constraintStart_toEndOf="@+id/iv_clinica"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,6 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:padding="2dp"
         android:text="@string/descricao"
@@ -61,6 +61,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:padding="2dp"
         android:text="@string/beneficios"
@@ -75,6 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:padding="2dp"
         android:text="@string/segmentos"
@@ -89,6 +91,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:padding="2dp"
         android:text="@string/telefone"
@@ -103,6 +106,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:padding="2dp"
         android:text="@string/endereco"
